--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 .sass-cache
 po/*.mo
 docs/
+!static/docs
 node_modules/
 bower_components/
 public/
-www-root/index.html
-www-root/app/*.js
-www-root/app/*.css
